refactor(rest): Port SearchFeed to Java